add chapter 4 content

--- a/templates/modules/book.html
+++ b/templates/modules/book.html
@@ -15,5 +15,6 @@
         <div class="book_body">
             {% raw book['description'] %}
         </div>
+        <p><a href="/edit/{{ book['isbn'] }}">Edit</a></p>
     </div>
 </div>
