--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,10 @@
-{% extends "main.html" %}
-
-{% block header %}
-  <h1>{{ header_text }}</h1>
-{% end %}
-
-{% block body %}
-  <p>Hello from the child template.</p>
-{% end %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Welcome Back!</title>
+  </head>
+  <body>
+    <h1>Welcome back, {{ user }}</h1>
+  </body>
+</html>
